add: Añadi la sección del perfil

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
   </header>
   <main>
-
+    <section class="perfil">
+      <div class="img-perfil">
+        <img src="./assets/68190081_DJV MAR 1011-02.svg" alt="imagen de perfil de Rodrigo">
+      </div>
+      <h1>Rodrigo Brian Rojas</h1>
+      <p>Desarrollador Web en formación. Me apasiona crear videojuegos web y resolver retos de código con atención al
+        detalle. Disfruto aprendiendo herramientas full-stack y colaborando en proyectos de entretenimiento. Profesional
+        pero relajado; listo para convertir ideas en experiencias interactivas.</p>
+    </section>
   </main>
   <footer>
 
