add: Añadi sección de habilidades y Tecnologias

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </header>
   <main>
-    <section class="perfil">
+    <section class="about">
       <div class="img-perfil">
         <img src="./assets/68190081_DJV MAR 1011-02.svg" alt="imagen de perfil de Rodrigo">
       </div>
@@ -20,6 +20,110 @@
       <p>Desarrollador Web en formación. Me apasiona crear videojuegos web y resolver retos de código con atención al
         detalle. Disfruto aprendiendo herramientas full-stack y colaborando en proyectos de entretenimiento. Profesional
         pero relajado; listo para convertir ideas en experiencias interactivas.</p>
+    </section>
+    <section class="skills-grid">
+      <h1>Habilidades y Tecnologias</h1>
+      <div class="skills-card">
+        <h2>FRONT-END</h2>
+        <ul>
+          <li>
+            <div><img src="./assets/html-5-svgrepo-com.svg" alt="icono de HTML5"></div>
+            <p>HTML5</p>
+          </li>
+          <li>
+            <div><img src="./assets/css-3-svgrepo-com.svg" alt="icono de CSS3"></div>
+            <p>CSS3</p>
+          </li>
+          <li>
+            <div><img src="./assets/js-svgrepo-com.svg" alt="icono de JavaScript"></div>
+            <p>JavaScript</p>
+          </li>
+          <li>
+            <div><img src="./assets/react-svgrepo-com.svg" alt="icono de React"></div>
+            <p>React</p>
+          </li>
+          <li>
+            <div><img src="./assets/responsive-design-svgrepo-com.svg" alt="icono de Responsive Design"></div>
+            <p>Responsive Design</p>
+          </li>
+        </ul>
+      </div>
+      <div class="skills-card">
+        <h2>BACK-END</h2>
+        <ul>
+          <li>
+            <div><img src="./assets/python-svgrepo-com.svg" alt="icono de Python"></div>
+            <p>Python</p>
+          </li>
+          <li>
+            <div><img src="./assets/laravel-svgrepo-com.svg" alt="icono de Laravel"></div>
+            <p>Laravel</p>
+          </li>
+          <li>
+            <div><img src="./assets/mysql-logo-svgrepo-com.svg" alt="icono de MySQL"></div>
+            <p>MySQL</p>
+          </li>
+          <li>
+            <div><img src="./assets/api-svgrepo-com.svg" alt="icono de APIs Restful"></div>
+            <p>APIs Restful</p>
+          </li>
+          <li>
+            <div><img src="./assets/security-svgrepo-com.svg" alt="icono de Auteticacion y Seguridad"></div>
+            <p>Auteticacion y Seguridad</p>
+          </li>
+        </ul>
+      </div>
+      <div class="skills-card">
+        <h2>Diseño</h2>
+        <ul>
+          <li>
+            <div><img src="./assets/figma-svgrepo-com.svg" alt="icono de Figma"></div>
+            <p>Figma</p>
+          </li>
+          <li>
+            <div><img src="./assets/prototype-1-svgrepo-com.svg" alt="icono de Prototipado Interactivo"></div>
+            <p>Prototipado Interactivo</p>
+          </li>
+          <li>
+            <div><img src="./assets/user-search-svgrepo-com.svg" alt="icono de Investigacion de Usuarios"></div>
+            <p>Investigacion de Usuarios</p>
+          </li>
+          <li>
+            <div><img src="./assets/information-architecture-svgrepo-com.svg"
+                alt="icono de Arquitectura de Información"></div>
+            <p>Arquitectura de Información</p>
+          </li>
+          <li>
+            <div><img src="./assets/layouts-svgrepo-com.svg" alt="icono de Diseño de Interfaz Intuitiva"></div>
+            <p>Diseño de Interfaz Intuitiva</p>
+          </li>
+        </ul>
+      </div>
+      <div class="skills-card">
+        <h2>Herramientas</h2>
+        <ul>
+          <li>
+            <div><img src="./assets/git-svgrepo-com.svg" alt="icono de Git"></div>
+            <p>Git</p>
+          </li>
+          <li>
+            <div><img src="./assets/github-svgrepo-com.svg" alt="icono de GitHub"></div>
+            <p>GitHub</p>
+          </li>
+          <li>
+            <div><img src="./assets/kanban-svgrepo-com.svg" alt="icono de Metodologías Ágiles"></div>
+            <p>Metodologías Ágiles</p>
+          </li>
+          <li>
+            <div><img src="./assets/npm-svgrepo-com.svg" alt="icono de NPM"></div>
+            <p>NPM</p>
+          </li>
+          <li>
+            <div><img src="./assets/docker-svgrepo-com.svg" alt="icono de Docker"></div>
+            <p>Docker</p>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <footer>
