add: Añadi comentarios para mayor claridad

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   </header>
   <main>
+    <!-- Sección de Mi Perfil -->
     <section class="about">
       <div class="img-perfil">
         <img src="./assets/68190081_DJV MAR 1011-02.svg" alt="imagen de perfil de Rodrigo">
@@ -21,8 +22,10 @@
         detalle. Disfruto aprendiendo herramientas full-stack y colaborando en proyectos de entretenimiento. Profesional
         pero relajado; listo para convertir ideas en experiencias interactivas.</p>
     </section>
+    <!-- Sección de Mis Capacidades -->
     <section class="skills-grid">
       <h1>Habilidades y Tecnologias</h1>
+      <!-- Tarjeta de Front-end -->
       <div class="skills-card">
         <h2>FRONT-END</h2>
         <ul>
@@ -48,6 +51,7 @@
           </li>
         </ul>
       </div>
+      <!-- Tarjeta de Back-end -->
       <div class="skills-card">
         <h2>BACK-END</h2>
         <ul>
@@ -73,6 +77,7 @@
           </li>
         </ul>
       </div>
+      <!-- Tarjeta de Diseño -->
       <div class="skills-card">
         <h2>Diseño</h2>
         <ul>
@@ -99,6 +104,7 @@
           </li>
         </ul>
       </div>
+      <!-- Tarjeta de Herramientas -->
       <div class="skills-card">
         <h2>Herramientas</h2>
         <ul>
