add: Añadi sección de Mis Projectos

--- a/index.html
+++ b/index.html
@@ -131,6 +131,55 @@
         </ul>
       </div>
     </section>
+    <!-- Sección de Mis Proyectos -->
+    <section class="panel">
+      <h1>Proyectos</h1>
+      <!-- Grilla del panel -->
+      <div class="projects-grid">
+        <!-- Projecto 1 -->
+        <div class="project-card">
+          <img src="" alt="Imagen del Projecto">
+          <div class="project-info">
+            <h3>Projecto N°1</h3>
+            <p>Tecnologias: React, Node.js, MongoDB</p>
+            <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit.</p>
+          </div>
+          <div class="project-links">
+            <a href="#">Ver Despliegue</a>
+            <a href="#">Ver Repositorio (GitHub)</a>
+          </div>
+        </div>
+        <!-- Projecto 2 -->
+        <div class="project-card">
+          <img src="" alt="Imagen del Projecto">
+          <div class="project-info">
+            <h3>Projecto N°2</h3>
+            <p>Tecnologias: Vue.js, Firebase, Figma</p>
+            <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit.</p>
+          </div>
+          <div class="project-links">
+            <a href="#">Ver Despliegue</a>
+            <a href="#">Ver Repositorio (GitHub)</a>
+          </div>
+        </div>
+        <!-- Projecto 3 -->
+         <div class="project-card">
+          <img src="" alt="Imagen del Projecto">
+          <div class="project-info">
+            <h3>Projecto N°3</h3>
+            <p>Tecnologias: HTML, CSS, JavaScript Puro</p>
+            <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit.</p>
+          </div>
+          <div class="project-links">
+            <a href="#">Ver Despliegue</a>
+            <a href="#">Ver Repositorio (GitHub)</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer>
 
