--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </div>
         </div>
         <!-- Projecto 3 -->
-         <div class="project-card">
+        <div class="project-card">
           <img src="" alt="Imagen del Projecto">
           <div class="project-info">
             <h3>Projecto N°3</h3>
@@ -176,6 +176,56 @@
           <div class="project-links">
             <a href="#">Ver Despliegue</a>
             <a href="#">Ver Repositorio (GitHub)</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Sección de Mi Contactos -->
+    <section class="Contact">
+      <h1>Contactos</h1>
+      <div class="form">
+        <form action="#">
+          <div>
+            <label for="name">Nombre y Apellido</label>
+            <input type="text" id="name" required>
+          </div>
+          <div>
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" required>
+          </div>
+          <div>
+            <label for="message">Mensaje</label>
+            <textarea name="message" id="message"></textarea>
+          </div>
+          <button type="submit">Enviar Mensaje</button>
+        </form>
+      </div>
+      <div class="social-platforms">
+        <h2>Redes Sociales</h2>
+        <div class="social-flex">
+          <div class="social-card">
+            <div class="img-social">
+              <img src="./assets/github-svgrepo-com.svg" alt="GitHub">
+            </div>
+            <p>GitHub</p>
+          </div>
+          <div class="social-card">
+            <div class="img-social">
+              <img src="./assets/linkedin-svgrepo-com.svg" alt="LinkedIn">
+            </div>
+            <p>LinkedIn</p>
+          </div>
+          <div class="social-card">
+            <div class="img-social">
+              <img src="./assets/twitter-svgrepo-com.svg" alt="Twitter">
+            </div>
+            <p>Twitter</p>
+          </div>
+          <div class="social-card">
+            <div class="img-social">
+              <img src="./assets/youtube-svgrepo-com.svg" alt="YouTube">
+            </div>
+            <p>YouTube</p>
           </div>
         </div>
       </div>
