add: Agrege un footer y añadi la clase section-panel faltantes en otras secciónes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </header>
   <main>
     <!-- Sección de Mi Perfil -->
-    <section class="about">
+    <section class="about section-panel">
       <div class="img-perfil">
         <img src="./assets/68190081_DJV MAR 1011-02.svg" alt="imagen de perfil de Rodrigo">
       </div>
@@ -183,7 +183,7 @@
       </div>
     </section>
     <!-- Sección de Mi Contactos -->
-    <section class="Contact">
+    <section class="Contact section-panel">
       <h1>Contactos</h1>
       <div class="form">
         <form action="#">
@@ -234,7 +234,7 @@
     </section>
   </main>
   <footer>
-
+    <p>&#xA9; 2025 Rodrigo Rojas. Todos los derechos reservados.</p>
   </footer>
 </body>
 
