--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
   </header>
   <main>
     <!-- Sección de Mi Perfil -->
-    <section class="about section-panel">
-      <div class="img-perfil">
-        <img src="./assets/68190081_DJV MAR 1011-02.svg" alt="imagen de perfil de Rodrigo">
+    <section class="section-panel">
+      <div class="about">
+        <h1>// Perfil //</h1>
+        <div class="img-perfil">
+          <img src="./assets/68190081_DJV MAR 1011-02.svg" alt="imagen de perfil de Rodrigo">
+          <h2>Rodrigo Brian Rojas</h2>
+        </div>
+        <p>Desarrollador Web en formación. Me apasiona crear videojuegos web y resolver retos de código con atención al
+          detalle. Disfruto aprendiendo herramientas full-stack y colaborando en proyectos de entretenimiento.
+          Profesional
+          pero relajado; listo para convertir ideas en experiencias interactivas.</p>
       </div>
-      <h1>Rodrigo Brian Rojas</h1>
-      <p>Desarrollador Web en formación. Me apasiona crear videojuegos web y resolver retos de código con atención al
-        detalle. Disfruto aprendiendo herramientas full-stack y colaborando en proyectos de entretenimiento. Profesional
-        pero relajado; listo para convertir ideas en experiencias interactivas.</p>
     </section>
     <!-- Sección de Mis Capacidades -->
     <section class="section-panel">
