add: Añadi estilos al footer

--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
       </div>
     </section>
   </main>
+  <!-- Footer -->
   <footer>
     <p>&#xA9; 2025 Rodrigo Rojas. Todos los derechos reservados.</p>
   </footer>
