add: Añadi detalles para mejorar el HTML

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
     <!-- Sección de Mis Capacidades -->
     <section class="section-panel">
-      <h1>Habilidades y Tecnologias</h1>
+      <h1>// Habilidades y Tecnologias //</h1>
       <!-- Tarjeta de Front-end -->
       <div class="skills-grid">
         <div class="skills-card">
@@ -140,12 +140,12 @@
     </section>
     <!-- Sección de Mis Proyectos -->
     <section class="section-panel">
-      <h1>Proyectos</h1>
+      <h1>// Proyectos //</h1>
       <!-- Grilla del panel -->
       <div class="projects-grid">
         <!-- Projecto 1 -->
         <div class="project-card">
-          <img src="" alt="Imagen del Projecto">
+          <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
             <h3>Projecto N°1</h3>
             <p>Tecnologias: React, Node.js, MongoDB</p>
@@ -159,7 +159,7 @@
         </div>
         <!-- Projecto 2 -->
         <div class="project-card">
-          <img src="" alt="Imagen del Projecto">
+          <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
             <h3>Projecto N°2</h3>
             <p>Tecnologias: Vue.js, Firebase, Figma</p>
@@ -173,7 +173,7 @@
         </div>
         <!-- Projecto 3 -->
         <div class="project-card">
-          <img src="" alt="Imagen del Projecto">
+          <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
             <h3>Projecto N°3</h3>
             <p>Tecnologias: HTML, CSS, JavaScript Puro</p>
@@ -189,7 +189,7 @@
     </section>
     <!-- Sección de Mi Contactos -->
     <section class="section-panel">
-      <h1>Contactos</h1>
+      <h1>// Contactos //</h1>
       <div class="contact">
         <div class="form">
           <form action="#">
