--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
             <h3>Projecto N°1</h3>
-            <p>Tecnologias: React, Node.js, MongoDB</p>
+            <p class="tech-used">Tecnologias: React, Node.js, MongoDB</p>
             <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
               adipisicing elit.</p>
           </div>
@@ -167,7 +167,7 @@
           <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
             <h3>Projecto N°2</h3>
-            <p>Tecnologias: Vue.js, Firebase, Figma</p>
+            <p class="tech-used">Tecnologias: Vue.js, Firebase, Figma</p>
             <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
               adipisicing elit.</p>
           </div>
@@ -181,7 +181,7 @@
           <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
             <h3>Projecto N°3</h3>
-            <p>Tecnologias: HTML, CSS, JavaScript Puro</p>
+            <p class="tech-used">Tecnologias: HTML, CSS, JavaScript Puro</p>
             <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
               adipisicing elit.</p>
           </div>
