--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
         <div class="form">
           <form action="#">
             <div>
-              <label for="name">Nombre y Apellido</label>
+              <label for="name">Nombre y Apellido:</label>
               <input type="text" id="name" required>
             </div>
             <div>
-              <label for="email">Email</label>
+              <label for="email">Email:</label>
               <input type="email" name="email" id="email" required>
             </div>
             <div>
-              <label for="message">Mensaje</label>
+              <label for="message">Mensaje:</label>
               <textarea name="message" id="message"></textarea>
             </div>
             <button type="submit">Enviar Mensaje</button>
