fix: Arregle un bug visual con la lista de contactos al reducir la resolución

--- a/index.html
+++ b/index.html
@@ -215,32 +215,32 @@
         </div>
         <div class="social-platforms">
           <h2>Redes Sociales</h2>
-          <div class="social-flex">
-            <div class="social-card">
+          <ul class="social-flex">
+            <li>
               <div class="img-social">
                 <img src="./assets/github-svgrepo-com.svg" alt="GitHub">
-              </div>
               <p>GitHub</p>
-            </div>
-            <div class="social-card">
+              </div>
+            </li>
+            <li>
               <div class="img-social">
                 <img src="./assets/linkedin-svgrepo-com.svg" alt="LinkedIn">
-              </div>
               <p>LinkedIn</p>
-            </div>
-            <div class="social-card">
+              </div>
+            </li>
+            <li>
               <div class="img-social">
                 <img src="./assets/twitter-svgrepo-com.svg" alt="Twitter">
-              </div>
               <p>Twitter</p>
-            </div>
-            <div class="social-card">
-              <div class="img-social">
-                <img src="./assets/youtube-svgrepo-com.svg" alt="YouTube">
               </div>
-              <p>YouTube</p>
-            </div>
-          </div>
+            </li>
+            <li>
+              <div class="img-social">
+                <img src="./assets/youtube-svgrepo-com.svg" alt="Youtube">
+              <p>Youtube</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
