add: Añadi interacion con las redes sociales

--- a/index.html
+++ b/index.html
@@ -217,28 +217,28 @@
           <h2>Redes Sociales</h2>
           <ul class="social-flex">
             <li>
-              <div class="img-social">
+              <a href="" class="img-social">
                 <img src="./assets/github-svgrepo-com.svg" alt="GitHub">
-              <p>GitHub</p>
-              </div>
+                <p>GitHub</p>
+              </a>
             </li>
             <li>
-              <div class="img-social">
+              <a href="" class="img-social">
                 <img src="./assets/linkedin-svgrepo-com.svg" alt="LinkedIn">
-              <p>LinkedIn</p>
-              </div>
+                <p>LinkedIn</p>
+              </a>
             </li>
             <li>
-              <div class="img-social">
+              <a href="" class="img-social">
                 <img src="./assets/twitter-svgrepo-com.svg" alt="Twitter">
-              <p>Twitter</p>
-              </div>
+                <p>Twitter</p>
+              </a>
             </li>
             <li>
-              <div class="img-social">
+              <a href="" class="img-social">
                 <img src="./assets/youtube-svgrepo-com.svg" alt="Youtube">
-              <p>Youtube</p>
-              </div>
+                <p>Youtube</p>
+              </a>
             </li>
           </ul>
         </div>
