add: Añadi imagen de Portafolio y termine el nav

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="./assets/api-svgrepo-com.svg" alt="Portafolio">
+          <img src="./assets/portfolio-svgrepo-com.svg" alt="Portafolio">
           Portafolio
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,16 +33,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Perfil</a>
+              <a class="nav-link" aria-current="page" href="#about">Perfil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Habilidades</a>
+              <a class="nav-link" href="#skills">Habilidades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projectos</a>
+              <a class="nav-link" href="#projects">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contactos</a>
+              <a class="nav-link" href="#contact">Contactos</a>
             </li>
           </ul>
         </div>
@@ -51,7 +51,7 @@
   </header>
   <main>
     <!-- Sección de Mi Perfil -->
-    <section class="section-panel">
+    <section class="section-panel" id="about">
       <div class="about">
         <h1>// Perfil //</h1>
         <div class="img-perfil">
@@ -65,7 +65,7 @@
       </div>
     </section>
     <!-- Sección de Mis Capacidades -->
-    <section class="section-panel">
+    <section class="section-panel" id="skills">
       <h1>// Habilidades y Tecnologias //</h1>
       <!-- Tarjeta de Front-end -->
       <div class="skills-grid">
@@ -176,7 +176,7 @@
       </div>
     </section>
     <!-- Sección de Mis Proyectos -->
-    <section class="section-panel">
+    <section class="section-panel" id="projects">
       <h1>// Proyectos //</h1>
       <!-- Grilla del panel -->
       <div class="projects-grid">
@@ -184,7 +184,7 @@
         <div class="project-card">
           <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
-            <h3>Projecto N°1</h3>
+            <h3>Proyecto N°1</h3>
             <p class="tech-used">Tecnologias: React, Node.js, MongoDB</p>
             <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
               adipisicing elit.</p>
@@ -198,7 +198,7 @@
         <div class="project-card">
           <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
-            <h3>Projecto N°2</h3>
+            <h3>Proyecto N°2</h3>
             <p class="tech-used">Tecnologias: Vue.js, Firebase, Figma</p>
             <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
               adipisicing elit.</p>
@@ -212,7 +212,7 @@
         <div class="project-card">
           <img src="https://placehold.co/600x400/1a3a5a/00ffff?text=PROYECTO" alt="Imagen del Projecto">
           <div class="project-info">
-            <h3>Projecto N°3</h3>
+            <h3>Proyecto N°3</h3>
             <p class="tech-used">Tecnologias: HTML, CSS, JavaScript Puro</p>
             <p>Breve descripcion de el projecto y los objetivos alcanzados. Lorem ipsum dolor sit amet consectetur
               adipisicing elit.</p>
@@ -225,7 +225,7 @@
       </div>
     </section>
     <!-- Sección de Mi Contactos -->
-    <section class="section-panel">
+    <section class="section-panel" id="contact">
       <h1>// Contactos //</h1>
       <div class="contact">
         <div class="form">
