--- a/index.html
+++ b/index.html
@@ -249,25 +249,25 @@
           <h2>Redes Sociales</h2>
           <ul class="social-flex">
             <li>
-              <a href="" class="img-social">
+              <a href="#" class="img-social">
                 <img src="./assets/github-svgrepo-com.svg" alt="GitHub">
                 <p>GitHub</p>
               </a>
             </li>
             <li>
-              <a href="" class="img-social">
+              <a href="#" class="img-social">
                 <img src="./assets/linkedin-svgrepo-com.svg" alt="LinkedIn">
                 <p>LinkedIn</p>
               </a>
             </li>
             <li>
-              <a href="" class="img-social">
+              <a href="#" class="img-social">
                 <img src="./assets/twitter-svgrepo-com.svg" alt="Twitter">
                 <p>Twitter</p>
               </a>
             </li>
             <li>
-              <a href="" class="img-social">
+              <a href="#" class="img-social">
                 <img src="./assets/youtube-svgrepo-com.svg" alt="Youtube">
                 <p>Youtube</p>
               </a>
