--- a/index.html
+++ b/index.html
@@ -277,6 +277,14 @@
       </div>
     </section>
   </main>
+
+  <a class="btn-bt" href="#">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"
+      className="size-6">
+      <path strokeLinecap="round" strokeLinejoin="round" d="m4.5 15.75 7.5-7.5 7.5 7.5" />
+    </svg>
+  </a>
+
   <!-- Footer -->
   <footer>
     <p>&#xA9; 2025 Rodrigo Rojas. Todos los derechos reservados.</p>
