--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
     </section>
   </main>
 
+  <!-- Boton de Retorno -->
   <a class="btn-bt" href="#">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5} stroke="currentColor"
       className="size-6">
